Update markdown header in Lab4_Agent_Tools_LETRA.ipynb

--- a/Lab4_Agent_Tools_LETRA.ipynb
+++ b/Lab4_Agent_Tools_LETRA.ipynb
@@ -17,7 +17,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Laboratorio 4 sobre Agents y Tools"
+        "# Laboratorio 4: Agents y Tools"
       ],
       "metadata": {
         "id": "X1kGcqxh1Z6s"
