--- a/01-llm-fundamentals/Lab1_langchain_LLM_prompt_LETRA.ipynb
+++ b/01-llm-fundamentals/Lab1_langchain_LLM_prompt_LETRA.ipynb
@@ -6,20 +6,20 @@
         "id": "VBCSNaCdrBz-"
       },
       "source": [
-        "# Laboratorio: Setup y uso básico de LLMs con LangChain + Prompt engineering avanzado\n",
+        "# Laboratorio 1: Setup y uso básico de LLMs con LangChain + Prompt Engineering Avanzado\n",
         "\n",
-        "Este laboratorio está pensado para completarse en ~2 horas. Trabajaremos en Google Colab con recursos gratuitos, usando la Inference API de Hugging Face y un modelo instruct abierto.\n",
+        "Este laboratorio está pensado para completarse en ~2 horas. Trabajarás en Google Colab con recursos gratuitos, usando la Inference API de Hugging Face y un modelo instruct abierto.\n",
         "\n",
-        "- Contenidos:\n",
-        "  - Setup en Colab y configuración de Hugging Face Inference API\n",
-        "  - Uso básico de LLMs con LangChain (LCEL)\n",
-        "  - Parámetros de decodificación y control de estilo\n",
-        "  - Prompt engineering avanzado: zero-shot, few-shot, Chain of Thought, Role Prompting y salida estructurada (JSON)\n",
+        "**Contenidos:**\n",
+        "- Setup en Colab y configuración de Hugging Face Inference API\n",
+        "- Uso básico de LLMs con LangChain (LCEL)\n",
+        "- Parámetros de decodificación y control de estilo\n",
+        "- Prompt engineering avanzado: zero-shot, few-shot, Chain of Thought, Role Prompting y salida estructurada (JSON)\n",
         "\n",
-        "Al finalizar, podrás:\n",
-        "- Conectarte a un LLM instruct vía Hugging Face Inference API desde LangChain.\n",
-        "- Construir cadenas simples con `prompt | llm | parser`.\n",
-        "- Diseñar prompts efectivos y controlar formato de salida (incluido JSON).\n"
+        "**Al finalizar, podrás:**\n",
+        "- Conectarte a un LLM instruct vía Hugging Face Inference API desde LangChain\n",
+        "- Construir cadenas simples con `prompt | llm | parser`\n",
+        "- Diseñar prompts efectivos y controlar formato de salida (incluido JSON)"
       ]
     },
     {
@@ -28,9 +28,9 @@
         "id": "4RTG7_ybrBz_"
       },
       "source": [
-        "## Parte 0 — Setup (Colab + librerías + token)\n",
+        "## Parte 0: Setup (Colab + librerías + token)\n",
         "\n",
-        "Usaremos versiones estables para minimizar fricción en Colab. Asegurate de ejecutar esta sección antes de continuar.\n"
+        "Usarás versiones estables para minimizar fricción en Colab. Asegúrate de ejecutar esta sección antes de continuar."
       ]
     },
     {
@@ -95,11 +95,11 @@
       "source": [
         "### Configuración del token de Hugging Face\n",
         "\n",
-        "Para usar la Hugging Face Inference API, necesitás un token personal (gratuito). En Colab se recomienda guardarlo en `userdata`:\n",
+        "Para usar la Hugging Face Inference API necesitás un token personal (gratuito). En Colab se recomienda guardarlo en `userdata`:\n",
         "\n",
-        "1. Crear el token en `https://huggingface.co/settings/tokens`.\n",
-        "2. En Colab: Abre el menú en la barra izquierda haciendo click en la llave → \"Agregar nuevo secreto\" ponle `HF_TOKEN` y el token que generamos → Habilita el acceso al notebook.\n",
-        "3. Ejecutar la celda siguiente para leerlo.\n"
+        "1. Crear el token en https://huggingface.co/settings/tokens\n",
+        "2. En Colab: Abre el menú en la barra izquierda haciendo clic en la llave → \"Agregar nuevo secreto\", ponle `HF_TOKEN` y el token que generaste → Habilita el acceso al notebook\n",
+        "3. Ejecutar la celda siguiente para leerlo"
       ]
     },
     {
@@ -122,9 +122,9 @@
         "id": "VQbt6t3FrB0A"
       },
       "source": [
-        "## Parte 1 — Uso básico de LLMs con LangChain\n",
+        "## Parte 1: Uso básico de LLMs con LangChain\n",
         "\n",
-        "Trabajaremos con un modelo instruct accesible vía Inference API. Para minimizar fricción, usaremos un modelo abierto.\n"
+        "Trabajarás con un modelo instruct accesible vía Inference API. Para minimizar fricción, usarás un modelo abierto."
       ]
     },
     {
@@ -168,17 +168,18 @@
       "source": [
         "### Ejercicio 1.1 (10 min)\n",
         "\n",
-        "- Probar 3 variaciones de `temperature` y observar el cambio en estilo.\n",
-        "- Cambiar el rol del `system` para forzar un estilo (p.ej., “responde con viñetas y máximo 3 líneas”).\n",
-        "- Pregunta sugerida: “Resume la diferencia entre entrenamiento y fine-tuning en 3 puntos.”\n"
+        "Realiza las siguientes tareas:\n",
+        "- Probar 3 variaciones de `temperature` y observar el cambio en estilo\n",
+        "- Cambiar el rol del `system` para forzar un estilo (por ejemplo: \"responde con viñetas y máximo 3 líneas\")\n",
+        "- Pregunta sugerida: \"Resume la diferencia entre entrenamiento y fine-tuning en 3 puntos\""
       ]
     },
     {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "mcTYMM-srB0B",
-        "collapsed": true
+        "collapsed": true,
+        "id": "mcTYMM-srB0B"
       },
       "outputs": [],
       "source": [
@@ -233,9 +234,9 @@
         "id": "Mi_Cg8IMrB0C"
       },
       "source": [
-        "## Parte 1.2 — Parámetros de decodificación\n",
+        "### Parámetros de decodificación\n",
         "\n",
-        "Ajustaremos parámetros como `top_p`, `repetition_penalty` y `max_new_tokens` para observar su efecto en la generación.\n"
+        "Ajustarás parámetros como `top_p`, `repetition_penalty` y `max_new_tokens` para observar su efecto en la generación."
       ]
     },
     {
@@ -276,50 +277,51 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "WV21ITSqzNyq"
+      },
       "source": [
+        "### Análisis de las configuraciones\n",
         "\n",
-        "### 1. Baseline (Equilibrado)\n",
-        "* `'temperature': 0.7` (Moderada)\n",
-        "* `'top_p': 0.95` (Alto)\n",
-        "* `'max_new_tokens': 128` (Largo estándar)\n",
+        "#### 1. Baseline (Equilibrado)\n",
+        "- `temperature: 0.7` (Moderada)\n",
+        "- `top_p: 0.95` (Alto)\n",
+        "- `max_new_tokens: 128` (Largo estándar)\n",
         "\n",
         "Esta configuración busca un **equilibrio entre coherencia y creatividad**.\n",
-        "* La **temperatura (0.7)** es moderada, permitiendo que el modelo sea un poco creativo sin desviarse demasiado de las respuestas más probables o \"seguras\".\n",
-        "* El **top_p (0.95)** le da un amplio \"menú\" de palabras posibles para elegir, fomentando la variedad.\n",
+        "- La **temperatura (0.7)** es moderada, permitiendo que el modelo sea un poco creativo sin desviarse demasiado de las respuestas más probables o \"seguras\"\n",
+        "- El **top_p (0.95)** le da un amplio \"menú\" de palabras posibles para elegir, fomentando la variedad\n",
         "\n",
         "**Resultado:** La respuesta es clara, usa una buena analogía (\"asistente que busca la mejor información en tiempo real\") y es informativa. Es la respuesta estándar y más fiable.\n",
         "\n",
         "---\n",
         "\n",
-        "### 2. Creativo (Exploratorio)\n",
-        "* `'temperature': 1.1` (Alta)\n",
-        "* `'top_p': 0.9` (Alto)\n",
-        "* `'max_new_tokens': 128` (Largo estándar)\n",
+        "#### 2. Creativo (Exploratorio)\n",
+        "- `temperature: 1.1` (Alta)\n",
+        "- `top_p: 0.9` (Alto)\n",
+        "- `max_new_tokens: 128` (Largo estándar)\n",
         "\n",
         "El factor clave aquí es la **alta temperatura (1.1)**.\n",
-        "* Una temperatura superior a 1.0 **aumenta la aleatoriedad**. Fuerza al modelo a considerar palabras menos probables, lo que puede llevar a respuestas más originales o inesperadas.\n",
-        "* El `top_p` sigue siendo alto, dándole muchas opciones.\n",
+        "- Una temperatura superior a 1.0 **aumenta la aleatoriedad**. Fuerza al modelo a considerar palabras menos probables, lo que puede llevar a respuestas más originales o inesperadas\n",
+        "- El `top_p` sigue siendo alto, dándole muchas opciones\n",
         "\n",
         "**Resultado:** La analogía es diferente y más específica que la del baseline. En lugar de un \"libro de conocimientos\" genérico, crea un escenario más vívido: \"un libro enorme con millones de páginas\", \"encontrar el nombre de un personaje\" y \"preguntas a alguien que conoce bien el contenido\". Es más narrativo y menos directo.\n",
         "\n",
         "---\n",
         "\n",
-        "### 3. Controlado (Conciso y Determinado)\n",
-        "* `'temperature': 0.2` (Muy baja)\n",
-        "* `'top_p': 0.8` (Bajo)\n",
-        "* `'repetition_penalty': 1.1` (Ligera penalización)\n",
-        "* `'max_new_tokens': 96` (Corto)\n",
+        "#### 3. Controlado (Conciso y Determinado)\n",
+        "- `temperature: 0.2` (Muy baja)\n",
+        "- `top_p: 0.8` (Bajo)\n",
+        "- `repetition_penalty: 1.1` (Ligera penalización)\n",
+        "- `max_new_tokens: 96` (Corto)\n",
         "\n",
         "Esta configuración está diseñada para ser **precisa, predecible y concisa**.\n",
-        "* La **temperatura (0.2)** y el **top_p (0.8)** son bajos. Esto \"enfría\" al modelo, obligándolo a elegir casi siempre la palabra *más probable* y limitando su \"menú\" de opciones. El resultado es menos creativo pero muy enfocado y coherente.\n",
-        "* La **penalización por repetición (1.1)** evita que se quede atascado repitiendo las mismas palabras \"seguras\" una y otra vez.\n",
-        "* Los **tokens máximos (96)** fuerzan una respuesta más corta.\n",
+        "- La **temperatura (0.2)** y el **top_p (0.8)** son bajos. Esto \"enfría\" al modelo, obligándolo a elegir casi siempre la palabra *más probable* y limitando su \"menú\" de opciones. El resultado es menos creativo pero muy enfocado y coherente\n",
+        "- La **penalización por repetición (1.1)** evita que se quede atascado repitiendo las mismas palabras \"seguras\" una y otra vez\n",
+        "- Los **tokens máximos (96)** fuerzan una respuesta más corta\n",
         "\n",
         "**Resultado:** La respuesta es la más directa y \"seca\". Va al grano (\"busca información relevante... y luego usa esa información\"), usa un ejemplo concreto (\"¿Qué sabes sobre los efectos...?\") y es notablemente más corta que las otras dos."
-      ],
-      "metadata": {
-        "id": "WV21ITSqzNyq"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -327,9 +329,9 @@
         "id": "PFWQ7vryrB0C"
       },
       "source": [
-        "## Parte 2 — Prompt engineering avanzado\n",
+        "## Parte 2: Prompt Engineering Avanzado\n",
         "\n",
-        "Exploraremos estrategias para mejorar la calidad y control de las respuestas: zero-shot, few-shot, restricciones de estilo, salida estructurada y Chain of Thought.\n"
+        "Explorarás estrategias para mejorar la calidad y control de las respuestas: zero-shot, few-shot, restricciones de estilo, salida estructurada y Chain of Thought."
       ]
     },
     {
@@ -340,13 +342,13 @@
       "source": [
         "### Conceptos clave: Zero-shot, Few-shot, CoT y Roles\n",
         "\n",
-        "- Zero-shot: el modelo resuelve la tarea solo con instrucciones; no se proporcionan ejemplos.\n",
-        "- Few-shot: además de la instrucción, se incluyen 1-3 ejemplos que muestran el formato y estilo deseados.\n",
-        "- Chain-of-Thought (CoT): se guía al modelo para mostrar pasos intermedios de razonamiento (p.ej., “razona paso a paso”) antes de una respuesta final.\n",
-        "- Role prompting: se asigna un rol (p.ej., “actúa como profesor de IA”) para influir en el estilo y nivel de detalle.\n",
-        "- JSON output: se pide una salida estricta en formato JSON y se valida con un parser.\n",
+        "- **Zero-shot**: el modelo resuelve la tarea solo con instrucciones; no se proporcionan ejemplos\n",
+        "- **Few-shot**: además de la instrucción, se incluyen 1-3 ejemplos que muestran el formato y estilo deseados\n",
+        "- **Chain-of-Thought (CoT)**: se guía al modelo para mostrar pasos intermedios de razonamiento (por ejemplo, \"razona paso a paso\") antes de una respuesta final\n",
+        "- **Role prompting**: se asigna un rol (por ejemplo, \"actúa como profesor de IA\") para influir en el estilo y nivel de detalle\n",
+        "- **JSON output**: se pide una salida estricta en formato JSON y se valida con un parser\n",
         "\n",
-        "Lectura recomendada: guía de prompt engineering avanzada en `https://learnprompting.org/docs/introduction`.\n"
+        "**Lectura recomendada**: guía de prompt engineering avanzada en https://learnprompting.org/docs/introduction"
       ]
     },
     {
@@ -355,7 +357,9 @@
         "id": "LiF9jJRfrB0C"
       },
       "source": [
-        "### Zero-shot y Few-shot\n"
+        "### Zero-shot y Few-shot\n",
+        "\n",
+        "Compararás la efectividad de proporcionar ejemplos versus no proporcionarlos."
       ]
     },
     {
@@ -417,7 +421,9 @@
         "id": "4b7hTF4wrB0D"
       },
       "source": [
-        "### Role prompting"
+        "### Role Prompting\n",
+        "\n",
+        "Asignarás un rol específico al modelo para influir en el estilo y nivel de detalle de la respuesta."
       ]
     },
     {
@@ -446,7 +452,9 @@
         "id": "BFhoZDI4rB0D"
       },
       "source": [
-        "### CoT (Chain-of-Thought) prompting"
+        "### CoT (Chain-of-Thought) Prompting\n",
+        "\n",
+        "Guiarás al modelo para mostrar pasos intermedios de razonamiento antes de dar una respuesta final."
       ]
     },
     {
@@ -509,7 +517,9 @@
         "id": "6SPYi9X1rB0F"
       },
       "source": [
-        "### Salida estructurada (JSON Output Parser)"
+        "### Salida estructurada (JSON Output Parser)\n",
+        "\n",
+        "Solicitarás al modelo una salida en formato JSON estricto y la validarás con un parser."
       ]
     },
     {
@@ -550,22 +560,22 @@
         "id": "CC4DngMVrB0G"
       },
       "source": [
-        "## Ejercicios — Parte 2\n",
+        "## Ejercicios: Parte 2\n",
         "\n",
-        "Resuelve los siguientes ejercicios. Modifica prompts y parámetros si es necesario y justifica brevemente tus decisiones (en una celda de texto).\n"
+        "Resuelve los siguientes ejercicios. Modifica prompts y parámetros si es necesario y justifica brevemente tus decisiones (en una celda de texto)."
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "from google.colab import drive\n",
-        "drive.mount('/content/drive')"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "f2NZm-Md2Jy4"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive')"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -573,12 +583,15 @@
         "id": "OFAmf9D0rB0G"
       },
       "source": [
-        "### Ejercicio 2.1 — Zero-shot vs Few-shot\n",
+        "### Ejercicio 2.1: Zero-shot vs Few-shot\n",
         "\n",
-        "- Tarea: explicar “regularización L2” en 3 viñetas claras para un público técnico.\n",
-        "- Paso 1 (zero-shot): crea un prompt sin ejemplos y observa el resultado.\n",
-        "- Paso 2 (few-shot): agrega 1-2 ejemplos de estilo y compara la salida.\n",
-        "- Pregunta guía: ¿mejoró la precisión o claridad con pocos ejemplos? Justifica.\n"
+        "**Tarea**: explicar \"regularización L2\" en 3 viñetas claras para un público técnico.\n",
+        "\n",
+        "**Pasos**:\n",
+        "1. **Zero-shot**: crea un prompt sin ejemplos y observa el resultado\n",
+        "2. **Few-shot**: agrega 1-2 ejemplos de estilo y compara la salida\n",
+        "\n",
+        "**Pregunta guía**: ¿mejoró la precisión o claridad con pocos ejemplos? Justifica."
       ]
     },
     {
@@ -639,11 +652,13 @@
         "id": "gsrH2ZdtrB0G"
       },
       "source": [
-        "### Ejercicio 2.2 — Chain-of-Thought (CoT)\n",
+        "### Ejercicio 2.2: Chain-of-Thought (CoT)\n",
         "\n",
-        "- Tarea: dado un problema de evaluación de modelos, razonar paso a paso y entregar una conclusión final breve.\n",
-        "- Problema sugerido: “¿Por qué accuracy puede ser engañoso en un dataset muy desbalanceado y qué métrica alternativa usarías?”\n",
-        "- Pista: pide explícitamente “razona paso a paso y luego da una respuesta final breve en una línea”.\n"
+        "**Tarea**: dado un problema de evaluación de modelos, razonar paso a paso y entregar una conclusión final breve.\n",
+        "\n",
+        "**Problema sugerido**: \"¿Por qué accuracy puede ser engañoso en un dataset muy desbalanceado y qué métrica alternativa usarías?\"\n",
+        "\n",
+        "**Pista**: pide explícitamente \"razona paso a paso y luego da una respuesta final breve en una línea\"."
       ]
     },
     {
@@ -683,11 +698,13 @@
         "id": "cRDMh9ewrB0G"
       },
       "source": [
-        "### Ejercicio 2.3 — Role prompting\n",
+        "### Ejercicio 2.3: Role Prompting\n",
         "\n",
-        "- Tarea: explicar el “sesgo de selección” a un equipo de data engineering con ejemplos concisos.\n",
-        "- Rol: “Actúa como líder técnico de datos; sé pragmático y directo, con viñetas concretas”.\n",
-        "- Objetivo: evaluar cómo cambia el estilo bajo un rol técnico específico.\n"
+        "**Tarea**: explicar el \"sesgo de selección\" a un equipo de data engineering con ejemplos concisos.\n",
+        "\n",
+        "**Rol**: \"Actúa como líder técnico de datos; sé pragmático y directo, con viñetas concretas\".\n",
+        "\n",
+        "**Objetivo**: evaluar cómo cambia el estilo bajo un rol técnico específico."
       ]
     },
     {
