--- a/04-agents-and-tools/Lab4_Agent_Tools_LETRA.ipynb
+++ b/04-agents-and-tools/Lab4_Agent_Tools_LETRA.ipynb
@@ -1,27 +1,13 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
-      "source": [
-        "# Laboratorio 4: Agents y Tools"
-      ],
       "metadata": {
         "id": "X1kGcqxh1Z6s"
-      }
+      },
+      "source": [
+        "# Laboratorio 4: Agents y Tools"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -31,9 +17,9 @@
       "source": [
         "## Introducción\n",
         "\n",
-        "En este laboratorio práctico sobre Agentes y Tools explorarás cómo construir agentes inteligentes utilizando la librería LangChain y LangGraph.\n",
+        "En este laboratorio práctico sobre Agentes y Tools explorarás cómo construir agentes inteligentes utilizando las librerías LangChain y LangGraph.\n",
         "\n",
-        "A través de una serie de ejercicios prácticos, aprenderás a:\n",
+        "A través de una serie de ejercicios prácticos aprenderás a:\n",
         "\n",
         "- Crear tu primer Agente ReAct.\n",
         "- Integrar múltiples tools en un agente.\n",
@@ -47,6 +33,12 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "collapsed": true,
+        "id": "DCVKnlNo-A3A"
+      },
+      "outputs": [],
       "source": [
         "%pip install -U \\\n",
         "  langchain==0.3.7 \\\n",
@@ -60,24 +52,20 @@
         "  pinecone-client \\\n",
         "  pydantic==2.9.2 \\\n",
         "  pypdf"
-      ],
-      "metadata": {
-        "id": "DCVKnlNo-A3A",
-        "collapsed": true
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "## Parte 1: Creando tu primer ReAct Agent\n",
-        "Crea un agente ReAct que use un modelo de lenguaje (ChatOpenAI) y una tool para contar cuántas letras “r” hay en una palabra.\n",
-        "El agente debe recibir una pregunta del usuario, invocar la herramienta y responder con el resultado."
-      ],
       "metadata": {
         "id": "ZiKJBKNKGcU8"
-      }
+      },
+      "source": [
+        "## Parte 1: Creando tu primer ReAct Agent\n",
+        "\n",
+        "Crea un agente ReAct que use un modelo de lenguaje (`ChatOpenAI`) y una tool para contar cuántas letras \"r\" hay en una palabra.\n",
+        "\n",
+        "El agente debe recibir una pregunta del usuario, invocar la herramienta y responder con el resultado."
+      ]
     },
     {
       "cell_type": "code",
@@ -114,17 +102,24 @@
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "## Parte 2: Agregando múltiples tools\n",
-        "Amplía el agente para incluir una segunda herramienta que calcule el área de un rectángulo.\n",
-        "Luego, haz una consulta que combine ambas herramientas en una sola interacción."
-      ],
       "metadata": {
         "id": "4NsMrvxdBG6A"
-      }
+      },
+      "source": [
+        "## Parte 2: Agregando múltiples tools\n",
+        "\n",
+        "Amplía el agente para incluir una segunda herramienta que calcule el área de un rectángulo.\n",
+        "\n",
+        "Luego, haz una consulta que combine ambas herramientas en una sola interacción."
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "SG9Jne9oEvNL"
+      },
+      "outputs": [],
       "source": [
         "# ✅ Define una tool que calcule el área de un rectángulo\n",
         "@tool\n",
@@ -140,25 +135,26 @@
         "# ✅ Invocar y mostrar la respuesta\n",
         "response = app.invoke({\"messages\": [(\"user\", query)]})\n",
         "print(response['messages'][-1].content)"
-      ],
-      "metadata": {
-        "id": "SG9Jne9oEvNL"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "## Parte 3: Construyendo un chatbot con LangGraph\n",
-        "Crea un StateGraph básico con un solo nodo chatbot que responda preguntas directamente usando el modelo LLM."
-      ],
       "metadata": {
         "id": "cBcLoRnsGV8E"
-      }
+      },
+      "source": [
+        "## Parte 3: Construyendo un chatbot con LangGraph\n",
+        "\n",
+        "Crea un `StateGraph` básico con un solo nodo chatbot que responda preguntas directamente usando el modelo LLM."
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "98w8jdehGpZX"
+      },
+      "outputs": [],
       "source": [
         "from langgraph.graph import StateGraph, START, END, MessagesState\n",
         "from langgraph.graph.message import add_messages\n",
@@ -184,36 +180,37 @@
         "# ✅ Invoca el grafo con una consulta\n",
         "response = graph.invoke({\"messages\": [(\"human\", \"Who is Ada Lovelace?\")]})\n",
         "print(response[\"messages\"][-1].content)"
-      ],
-      "metadata": {
-        "id": "98w8jdehGpZX"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "## Parte 4: Agregando WikipediaTool y usando stream_tool_responses\n",
-        "Integra la tool de Wikipedia al chatbot y usa la función stream_tool_responses para observar cómo el agente decide cuándo invocar la herramienta y cómo se entregan las respuestas en streaming."
-      ],
       "metadata": {
         "id": "FG8oQP8uJZZ7"
-      }
+      },
+      "source": [
+        "## Parte 4: Agregando WikipediaTool y usando stream_tool_responses\n",
+        "\n",
+        "Integra la tool de Wikipedia al chatbot y usa la función `stream_tool_responses` para observar cómo el agente decide cuándo invocar la herramienta y cómo se entregan las respuestas en streaming."
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "%pip install wikipedia"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "OC2V5ryDK2IH"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "%pip install wikipedia"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "WCLCEbcnIxKz"
+      },
+      "outputs": [],
       "source": [
         "from langchain_community.utilities import WikipediaAPIWrapper\n",
         "from langchain_community.tools import WikipediaQueryRun\n",
@@ -252,25 +249,27 @@
         "\n",
         "query = \"Who is Alan Turing?\"\n",
         "stream_tool_responses(query)\n"
-      ],
-      "metadata": {
-        "id": "WCLCEbcnIxKz"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "## Parte 5: Agregando una Tool de API externa\n",
-        "Agrega una tool que obtenga el clima actual de una ciudad usando la API de Open-Meteo."
-      ],
       "metadata": {
         "id": "io8zD2FtJWpq"
-      }
+      },
+      "source": [
+        "## Parte 5: Agregando una Tool de API externa\n",
+        "\n",
+        "Agrega una tool que obtenga el clima actual de una ciudad usando la API de Open-Meteo."
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "collapsed": true,
+        "id": "mnc4bBSQJYiP"
+      },
+      "outputs": [],
       "source": [
         "import requests\n",
         "from langchain_core.tools import tool\n",
@@ -322,26 +321,26 @@
         "query = \"What's the weather like in Montevideo and who was Nikola Tesla?\"\n",
         "response = graph.invoke({\"messages\": [(\"user\", query)]})\n",
         "print(response[\"messages\"][-1].content)"
-      ],
-      "metadata": {
-        "id": "mnc4bBSQJYiP",
-        "collapsed": true
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "## Parte 6: Agregando una base de conocimiento\n",
-        "Agrega una tool que consulte un índice de Pinecone con embeddings de un documento PDF."
-      ],
       "metadata": {
         "id": "C0i0ZQEWPSaD"
-      }
+      },
+      "source": [
+        "## Parte 6: Agregando una base de conocimiento\n",
+        "\n",
+        "Agrega una tool que consulte un índice de Pinecone con embeddings de un documento PDF."
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "hKVIx5LhYSci"
+      },
+      "outputs": [],
       "source": [
         "from langchain.text_splitter import RecursiveCharacterTextSplitter\n",
         "from langchain_community.document_loaders import PyPDFLoader\n",
@@ -389,15 +388,15 @@
         "from langchain_pinecone import PineconeVectorStore\n",
         "vector_store = PineconeVectorStore.from_documents(chunks, embeddings, index_name=index_name)\n",
         "print(\"✅ Embeddings generados y cargados en Pinecone correctamente.\")"
-      ],
-      "metadata": {
-        "id": "hKVIx5LhYSci"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "clN4jLC_LfAo"
+      },
+      "outputs": [],
       "source": [
         "# ==========================================\n",
         "# Conexión y uso de la base de conocimiento (Pinecone)\n",
@@ -456,31 +455,34 @@
         "\n",
         "print(\"\\n🤖 Respuesta del agente:\\n\")\n",
         "print(response[\"messages\"][-1].content)"
-      ],
-      "metadata": {
-        "id": "clN4jLC_LfAo"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "## Parte 7: Condiciones personalizadas para decisión de uso de tools\n",
-        "Crea un agente que decida entre las diferentes tools según el contenido del mensaje del usuario.\n",
-        "- Si el mensaje menciona \"clima\" → invocar weather_tool.\n",
-        "- Si menciona \"wiki\" → invocar wikipedia_tool.\n",
-        "- Si menciona \"documento\" → invocar db_knowledge.\n",
-        "- Para cualquier otro mensaje → invocar al LLM y terminar el flujo sin llamar a ninguna tool.\n",
-        "\n",
-        "*Tener en cuenta que cada tool debe ser creada en un nodo independiente."
-      ],
       "metadata": {
         "id": "MN2CcL3fDCc_"
-      }
+      },
+      "source": [
+        "## Parte 7: Condiciones personalizadas para decisión de uso de tools\n",
+        "\n",
+        "Crea un agente que decida entre las diferentes tools según el contenido del mensaje del usuario:\n",
+        "\n",
+        "- Si el mensaje menciona \"clima\" → invocar `weather_tool`.\n",
+        "- Si menciona \"wiki\" → invocar `wikipedia_tool`.\n",
+        "- Si menciona \"documento\" → invocar `db_knowledge`.\n",
+        "- Para cualquier otro mensaje → invocar al LLM y terminar el flujo sin llamar a ninguna tool.\n",
+        "\n",
+        "**Nota:** Tener en cuenta que cada tool debe ser creada en un nodo independiente."
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "collapsed": true,
+        "id": "0GdfTfFeDtWX"
+      },
+      "outputs": [],
       "source": [
         "from langgraph.graph import StateGraph, START, END, MessagesState\n",
         "from langchain_core.messages import HumanMessage, AIMessage\n",
@@ -658,25 +660,26 @@
         "graph = graph_builder.compile()\n",
         "\n",
         "display(Image(graph.get_graph().draw_mermaid_png()))\n"
-      ],
-      "metadata": {
-        "id": "0GdfTfFeDtWX",
-        "collapsed": true
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "### Interactuar con el modelo"
-      ],
       "metadata": {
         "id": "HaYwawVi9LSo"
-      }
+      },
+      "source": [
+        "### Interactuar con el modelo\n",
+        "\n",
+        "Ejecuta las siguientes pruebas para validar el funcionamiento del agente con diferentes tipos de consultas."
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "Dekanm471WhP"
+      },
+      "outputs": [],
       "source": [
         "from langchain_core.messages import HumanMessage\n",
         "\n",
@@ -699,12 +702,21 @@
         "res_chat = graph.invoke({\"messages\": [HumanMessage(content=\"Contame un chiste corto.\")]})\n",
         "for m in res_chat[\"messages\"]:\n",
         "    print(type(m).__name__, \"->\", getattr(m, \"name\", None), \"\\n\", m.content, \"\\n\")\n"
-      ],
-      "metadata": {
-        "id": "Dekanm471WhP"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
